tests/snapshots/ui_tests__snapshot_browse_multiple_results.snap
---
source: tests/ui_tests.rs
expression: terminal.backend()
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Results (3) ─────────────────────────────────────────────────────────────────┐"
"│▶  #1 Tokio async runtime  [ddg]  1.000                                       │"
"│       https://tokio.rs                                                       │"
"│                                                                              │"
"│   #2 Ratatui TUI framework  [ddg]  1.000                                     │"
"│       https://ratatui.rs                                                     │"
"│                                                                              │"
"│   #3 Serde serialization  [ddg]  1.000                                       │"
"│       https://serde.rs                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  jk:move  l/enter:open  h/:search  q:quit                                      "
