tests/snapshots/ui_tests__snapshot_browse_result_with_snippet.snap
---
source: tests/ui_tests.rs
expression: terminal.backend()
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Results (1) ─────────────────────────────────────────────────────────────────┐"
"│▶  #1 Serde  [ddg]  1.000                                                     │"
"│       https://serde.rs                                                       │"
"│       A framework for serializing and deserializing Rust data structures effi│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  jk:move  l/enter:open  h/:search  q:quit                                      "
