tests/snapshots/ui_tests__snapshot_browse_with_failed_engines.snap
---
source: tests/ui_tests.rs
expression: terminal.backend()
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Results (1) — 2 failed: brave, startpage ────────────────────────────────────┐"
"│▶  #1 Tokio async runtime  [ddg]  1.000                                       │"
"│       https://tokio.rs                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  jk:move  l/enter:open  h/:search  q:quit                                      "
