tests/snapshots/ui_tests__snapshot_input_mode_with_text.snap
---
source: tests/ui_tests.rs
expression: terminal.backend()
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│ratatui widgets                                                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Results ─────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  enter:search  esc:quit                                                        "
